@@ -1,0 +1,46 @@
+﻿<Window x:Class="GAPPSF.Regions.SelectRegionWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:l="clr-namespace:GAPPSF.Localization"
+        xmlns:p="clr-namespace:GAPPSF.Core"
+        xmlns:ui="clr-namespace:GAPPSF.UIControls"
+        Title="{l:Translate SelectGeocachesWithinRegion}" Height="300" Width="300">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <GroupBox Grid.Row="0" Header="{l:Translate SelectionOptions}">
+            <ui:SelectionContext Margin="4" x:Name="selectionContext" />
+        </GroupBox>
+        <GroupBox Grid.Row="1" Header="{l:Translate RegionSelection}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <TextBlock Margin="4" Grid.Row="0" Grid.Column="0" Text="{l:Translate Level}" />
+                <ComboBox Margin="4" Grid.Row="0" Grid.Column="1"
+                  ItemsSource="{Binding Arealevels}"
+                  SelectedItem="{Binding SelectedAreaLevel}"
+                  />
+                <TextBlock Margin="4" Grid.Row="1" Grid.Column="0" Text="{l:Translate Area}" />
+                <ComboBox Margin="4" Grid.Row="1" Grid.Column="1"
+                  ItemsSource="{Binding Areas}"
+                  SelectedItem="{Binding SelectedArea}"
+                  />
+                <CheckBox  Margin="4" Grid.Row="2" Grid.Column="1" IsChecked="{Binding InEnvelope}" Content="{l:Translate InEnvelope}" />
+                <TextBlock Margin="4" Grid.Row="3" Grid.Column="0" Text="{l:Translate Prefix}" />
+                <TextBox Margin="4" Grid.Row="3" Grid.Column="1" Text="{Binding Prefix, UpdateSourceTrigger=PropertyChanged}" />
+            </Grid>
+        </GroupBox>
+        <Button Margin="4,14,4,4"  Grid.Row="3" Content="{l:Translate Select}" Command="{Binding PerformActionCommand}" />
+    </Grid>
+</Window>
